package model;

public class Table {
    private int tableID;
    private int tableLayout;


    public Table(int tableID, int tableLayout) {
        this.tableID = tableID;
        this.tableLayout = tableLayout;

    }

    // Getters and setters...
}
